# gotorch

./: .gitignore  go.mod
example/mlp/: main.go
init/: init.go
internal/model/: load.go
internal/model/torch/: rebuild_paramter.go  rebuild_tensor.go
internal/torch/: amp.go  autocast.go  comparison.go  cuda.go  data.go  half.go  half_test.go  indexing.go  loss.go  module.go  operator.go  operator.h  sampling.go  serialize.go  tensor.go  tensor.h  utils.go  vecenv.go
lib/: CMakeLists.txt  operator.cpp  reward.cpp  tensor.cpp  utils.cpp
loss/: cross_entropy.go  mse.go
model/: load.go
nn/: attention.go  attention_test.go  embedding.go  embedding_test.go  layer_norm.go  layer_norm_test.go  linear.go  linear_test.go  module.go
optimizer/: adam.go  adamw.go  optimizer.go  scheduler.go
rl/: buffer.go  mtfvecenv.go  vecenv.go
tensor/: amp.go  build_test.go  comparison.go  conv.go  cuda.go  data.go  indexing.go  operator.go  options.go  pool.go  sampling.go  scope.go  serialize.go  tensor.go  utils.go  utils_test.go
